localization simple change

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -1,5 +1,5 @@
 {
-  "welcomeMessage": "مرحباًٍِ بعودتك",
+  "welcomeMessage": "مرحباً بعودتك",
   "deleteAll": "حذف الكل",
   "deleteCompleted": "حذف المكتمل",
   "totalTasks": "كل المهام",
